# smart-lcc

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE  README.md  dump-stub.py  esptest.py  memmap.ld  platformio.ini  readserial.py  start-gdb-server-core0.sh  start-gdb-server-core1.sh  upload.jlink
custom_variants/nano_33_iot_custom_serial/: variant.cpp
esphome/: .gitignore  LCCUart.h  LambdaNumber.h  LambdaSwitch.h  compile.sh  esp-protocol.h  make_headers.sh  partitions-nina.csv  rp2040-connect.yaml  smart-lcc.yaml
esphome-output/: .gitignore  boot_app0.bin.h  bootloader.bin.h  bootloader_dio_40m.bin.h  firmware_crc.h  partitions.bin.h
firmware/: CMakeLists.txt  README.md  platformio.ini
firmware-arduino/: .gitignore  CMakeLists.txt  Credentials.h  arduino-config.yaml  defines.h  double_tap.cpp  dynamicParams.h  firmware-arduino.cpp  main.patch  sketch.yml  uf2families.json
firmware-arduino/libraries/PubSubClient/src/: PubSubClient.h
firmware-arduino/src/: AutomationController.cpp  AutomationController.h  FileIO.cpp  FileIO.h  MemoryFree.cpp  MemoryFree.h  NetworkController.cpp  NetworkController.h  SafePacketSender.h  SystemSettings.cpp  SystemSettings.h  SystemStatus.h  UIController.cpp  UIController.h  optional.hpp  types.h
firmware-arduino/src/SystemController/: HybridController.cpp  HybridController.h  PIDController.cpp  PIDController.h  SystemController.cpp  SystemController.h  TimedLatch.h  control_board_protocol.cpp  control_board_protocol.h  lcc_protocol.cpp
firmware-arduino/src/utils/: MovingAverage.h  checksum.h  polymath.cpp  polymath.h  triplet.cpp  triplet.h
firmware-arduino/src/xbm/: bssr_on.h  cup_no_smoke.h  cup_smoke_2.h  no_water.h  pump_on.h  sssr_on.h  wifi_mqtt.h  wifi_no_mqtt.h
firmware/lib/adafruit_gfx_mbed6/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_SSD1306.cpp  Adafruit_SSD1306.h
firmware/rp2040/: CMakeLists.txt  PIDController.h  SystemController.cpp  SystemController.h  control_board_protocol.cpp  control_board_protocol.h  lcc_protocol.h  main.cpp
firmware/rp2040/platform/: platform.h
firmware/rp2040/platform/debug/: platform.cpp
firmware/rp2040/platform/debug/emulator/: BiancaControlBoard.h  WaterBoiler.cpp
firmware/rp2040/utils/: checksum.cpp  hex_format.cpp  hex_format.h  triplet.h  uart_extras.cpp  uart_extras.h
firmware/src/: SystemSettings.cpp  SystemSettings.h  SystemStatus.cpp  SystemStatus.h  control_board_protocol.cpp  control_board_protocol.h  lcc_protocol.cpp  lcc_protocol.h  lccmacros.h  main.cpp  types.h
firmware/src/ControlBoardCommunication/: ControlBoardTransceiver.cpp  ControlBoardTransceiver.h  control_board_protocol.cpp  control_board_protocol.h  lcc_protocol.cpp
firmware/src/ControlBoardCommunication/Emulator/: BiancaControlBoard.cpp  BiancaControlBoard.h
firmware/src/Debug/: AuxLccTransceiver.cpp  AuxLccTransceiver.h  LccMasterTransceiver.cpp  LccMasterTransceiver.h
firmware/src/ExternalComms/: WifiTransceiver.cpp  WifiTransceiver.h
firmware/src/SystemController/: HybridController.cpp  HybridController.h  HysteresisController.cpp  HysteresisController.h  PIDController.cpp  PIDController.h  SystemController.cpp  SystemController.h  TimedLatch.cpp  TimedLatch.h  control_board_protocol.cpp  control_board_protocol.h  lcc_protocol.cpp  lcc_protocol.h
firmware/src/UI/: UIController.cpp  UIController.h
firmware/src/platform/debug/: platform.cpp
firmware/src/platform/debug/emulator/: BiancaControlBoard.cpp  BiancaControlBoard.h  WaterBoiler.h
firmware/src/platform/rp2040/: platform.cpp
firmware/src/ssd1309/: Adafruit_GFX_Config.h
firmware/src/utils/: PicoQueue.h  PicoQueue.inl  SPIPreInit.h  hex_format.cpp  hex_format.h  triplet.cpp
include/: protocol.h
lib/slip/: README.md  slip.cpp  slip.h
pcb/: errata.md
pcb/smart-lcc/: BOM.xlsx  fp-info-cache  fp-lib-table  smart-lcc-cache.lib  smart-lcc.kicad_pcb  smart-lcc.kicad_pcb-bak  smart-lcc.pro  smart-lcc.sch  smart-lcc.sch-bak  sym-lib-table
pcb/smart-lcc/2N7002.pretty/: SOT-23_copy_copy.kicad_mod
pcb/smart-lcc/SW_Push_ADTSMW65.pretty/: ADTSMW65.kicad_mod
pcb/smart-lcc/manufacturing/rev-a/: smart-lcc-mk1-bom.xlsx
pcb/smart-lcc/manufacturing/rev-b/: README.md  smart-lcc-bom.xlsx  smart-lcc-top-pos.csv  ~$smart-lcc-bom.xlsx
src/: BiancaUart.h  MulticoreSupport.cpp  MulticoreSupport.h  SystemSettings.cpp  SystemSettings.h  SystemStatus.cpp  SystemStatus.h  double_tap.cpp  esp-shared-types.h  main.cpp  pins.h  secrets.h.dist  smart_lcc.cpp  types.h  u8g2functions.c  u8g2functions.h
src/Controller/Core0/: HybridController.h  HysteresisController.h  PIDController.h  SafePacketSender.cpp  SafePacketSender.h  SystemController.cpp  SystemController.h  SystemSettings.cpp  SystemSettings.h  TimedLatch.h  control_board_protocol.cpp  control_board_protocol.h  lcc_protocol.cpp
src/Controller/Core0/Utils/: ClearUartCruft.h  UartReadBlockingTimeout.h
src/Controller/Core1/: EspFirmware.cpp  EspFirmware.h  UIController.cpp  UIController.h
src/Controller/SingleCore/: EspBootloader.cpp  EspBootloader.h  EspFirmware.cpp  EspFirmware.h
src/controller/: BiancaUart.h  SPITransceiver.cpp  SPITransceiver.h  main.cpp
src/peripheral/: main.cpp
src/utils/: ClearUartCruft.h  MovingAverage.h  PicoQueue.h  USBDebug.h  UartReadBlockingTimeout.h  compile_time_crc.hpp  crc32.cpp  crc32.h  hex_format.cpp  lccmacros.h
stub/: stub.h
xbm/: cup_smoke_1.h  eco_mode.h
